modification au niveau du titre

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </div>
 
 <div class="four">
-<div class="titre">How it works - Simple as 1, 2, 3</div>
+<div class="titre">How it works — Simple as 1, 2, 3</div>
 
 <div class="displaytwo">
 <div class="iphone"><img class="phone" src="./img/app-iPhone.png"/></div>
